<resources>
    <string name="app_name">Captura Pokemons</string>
    <string name="pokedex">Pokedex</string>
    <string name="mis_pokemon">Mis Pokemon</string>
    <string name="ajustes">Ajustes</string>
    <string name="txt_setting">Elige el idioma de la aplicación</string>
    <string name="titulo_setting">Idioma de la Aplicación</string>
    <string name="texto_lenguaje">Idioma</string>
    <string name="sumario_eliminar">Permiso para poder eliminar Pokemon en Pokemon capturados</string>
    <string name="titulo_eliminar">Eliminar Pokemon</string>
    <string name="sumario_about">Información</string>
    <string name="titulo_about">Acerca de</string>
    <string name="titulo_cerrar">Cerrar sesión</string>
    <string name="sumario_cerrar">Cerrar la sesión actual</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="dialog">Desarrollado por Juan Antonio López.\nVersion 1.0.0</string>
    <string name="cerrarSesion">Cerrar Sesión usuario:</string>
    <string name="mensajeCerrarSesion">¿Desea cerrar la sesión actual?</string>
    <string name="toastCerrarSesion">Sesión cerrada correctamente.</string>
    <string name="msgCapturadoOk">Pokemon capturado correctamente!!!</string>
    <string name="msgCapturadoNoOk">Ha ocurrido un error y el Pokemon no ha sido capturado!!!</string>
    <string name="TextoFijoPeso">Peso:</string>
    <string name="TextoFijoAltura">Altura:</string>
    <string name="TextoFijoTipos">Tipos:</string>
    <string name="DescripcionBoton_Borrar">Borrar Pokemon capturado</string>
    <string name="NombreDetalles">Nombre:</string>
    <string name="TextoBorrarPokemon">Borrar Pokemon</string>
    <string name="tituloDetalle">Detalle</string>
    <string name="ToastPosibBorrado">Vaya a Ajustes si quiere activar el borrado</string>
    <string name="ToastBienvenido">"Bienvenido "</string>
    <string name="mensajeConfirmacionBorrado">"¿Deseas Eliminar el Pokemon "</string>
    <string name="textoIdiomaActual">"El idioma actual es: "</string>
    <string name="textoPartido">"El Pokemon "</string>
    <string name="otroTextoPartido">" ha sido borrado correctamente"</string>
    <string name="usuario_activo">Usuario Activo</string>
    <string name="confirmacion">Confirmación</string>
</resources>