<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".vistas.detallesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenDetalles"
            style="@style/ImagenDetalle"
            android:layout_gravity="center"
            android:background="@drawable/marco"
            tools:srcCompat="@drawable/poke132" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textoFijoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/NombreDetalles" />

            <TextView
                android:id="@+id/nombreDetalles"
                style="@style/textoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                tools:text="Pepito" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textoFijoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="ID" />

            <TextView
                android:id="@+id/IdDetalles"
                style="@style/textoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                tools:text="Pepito" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textoFijoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/TextoFijoAltura" />

            <TextView
                android:id="@+id/alturaDetalles"
                style="@style/textoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                tools:text="Pepito" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textoFijoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/TextoFijoPeso" />

            <TextView
                android:id="@+id/pesoDetalles"
                style="@style/textoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                tools:text="Pepito" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textoFijoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/TextoFijoTipos" />

            <TextView
                android:id="@+id/tiposDetalles"
                style="@style/textoDetalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                tools:text="Pepito" />
        </LinearLayout>
<Button
    android:id="@+id/botonBorrar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="35dp"
    android:textSize="25sp"
    android:text="@string/TextoBorrarPokemon"/>
    </LinearLayout>


</FrameLayout>
</ScrollView>