<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tarjetaCapturado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/azulClaro"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <!--
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewPokemon"
            style="@style/ImagenCardCapturados"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNombre"
                style="@style/TituloCapturados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:text="Pepito" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textoFijoID"
                    style="@style/TextoFijoCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ID:" />

                <TextView
                    android:id="@+id/textID"
                    style="@style/TextoDatosCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    tools:text="22" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoFijoPeso"
                    style="@style/TextoFijoCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextoFijoPeso" />

                <TextView
                    android:id="@+id/textPeso"
                    style="@style/TextoDatosCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    tools:text="10 Kg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoFijoAltura"
                    style="@style/TextoFijoCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextoFijoAltura" />

                <TextView
                    android:id="@+id/textAltura"
                    style="@style/TextoDatosCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    tools:text="10 Metros" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textoFijoTipos"
                    style="@style/TextoFijoCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/TextoFijoTipos" />

                <TextView
                    android:id="@+id/textTipos"
                    style="@style/TextoDatosCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    tools:text="Poison/Grass" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/botonBorrarPokemon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.25"
            android:background="@android:color/transparent"
            android:contentDescription="@string/DescripcionBoton_Borrar"
            android:src="@drawable/delete_pokemon" />
    </LinearLayout>
</androidx.cardview.widget.CardView>